# disk-scheduler-sim

./: .gitignore  CMakeLists.txt
data/examples/: 1demo.csv
src/core/: SimulationEngine.cpp  SimulationEngine.h  SimulationEvent.h
src/disk/: DiskModel.cpp  DiskModel.h  DiskState.h
src/metrics/: MetricsCollector.cpp  MetricsCollector.h
src/request/: Request.h  RequestsLoaders.cpp  RequestsLoaders.h
src/scheduler/: IScheduler.h
src/scheduler/FCFS/: FcfsScheduler.cpp  FcfsScheduler.h
src/scheduler/SCAN/: CscanScheduler.cpp  CscanScheduler.h  ScanScheduler.cpp  ScanScheduler.h
src/scheduler/SSTF/: SstfScheduler.cpp  SstfScheduler.h
src/scheduler/rand/: RandScheduler.cpp  RandScheduler.h
